# nordic

./: CMakeLists.txt  Kconfig  LICENCE  README.md  prj.conf  sample.yaml
precompiled_hex/: app_signed_iot_creators_2022-02-18.hex
src/: main.c
src/ui/: buzzer.c  led_pwm.c  nmos.c  ui.c
src/ui/include/: buzzer.h  led_pwm.h  nmos.h  ui.h
